--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/MainLayout.razor
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -6,7 +8,9 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="@($"https://github.com/KristofferStrube/Blazor.MediaStreamRecording/blob/main/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Pages/{page}")" target="_blank" style="position: fixed; top: 5px; right: 5px">
+                <img src="https://img.shields.io/badge/this%20page%20on%20GitHub-@(page)-green?logo=github" />
+            </a>
         </div>
 
         <article class="content px-4">
@@ -14,3 +18,9 @@
         </article>
     </main>
 </div>
+
+@code {
+    private string relativeUri => NavigationManager.ToBaseRelativePath(NavigationManager.Uri.Split("?")[0]);
+
+    protected string page => (string.IsNullOrEmpty(relativeUri) ? "Home" : relativeUri) + ".razor";
+}
