--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/_Imports.razor
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using KristofferStrube.Blazor.MediaStreamRecording.WasmExample
 @using KristofferStrube.Blazor.MediaStreamRecording.WasmExample.Layout
+@using KristofferStrube.Blazor.MediaStreamRecording.WasmExample.Shared
