Updated audio recording demo.

--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/NavMenu.razor
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/NavMenu.razor
@@ -11,7 +11,13 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <svg class="bi" viewBox="0 0 16 16">
+                    <circle stroke="black" stroke-width="0" fill="#FFFFFF" cx="8" cy="4" r="3"></circle>
+                    <circle stroke="black" stroke-width="0" fill="#FFFFFF" cx="8" cy="8" r="3"></circle>
+                    <rect stroke="black" stroke-width="0" fill="#FFFFFF" x="5" y="4" width="6" height="4"></rect>
+                    <path stroke="#FFFFFF" stroke-width="1.5" fill="none" d="M 3 9 C 3 14 13 14 13 9" stroke-linecap="round"></path>
+                    <line stroke="#FFFFFF" stroke-width="1.5" x1="8" y1="15" x2="8" y2="13" stroke-linecap="round" fill="#FFFFFF"></line>
+                </svg> Audio Recording
             </NavLink>
         </div>
         <div class="nav-item px-3">
