--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/NavMenu.razor
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/Layout/NavMenu.razor
@@ -21,6 +21,14 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="VideoRecording">
+                <svg class="bi" viewBox="0 0 16 16">
+                    <rect stroke="#FFFFFF" stroke-width="0" fill="#FFFFFF" x="3" y="6" width="7" height="5"></rect>
+                    <polygon stroke="#FFFFFF" stroke-width="0" fill="#FFFFFF" points="11,6 11,11 13,13 13,4"></polygon>
+                </svg> Video Recording
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Status">
                 <svg class="bi" viewBox="0 0 16 16">
                     <polygon stroke="#FFFFFF" stroke-width="2" fill="transparent" points="8,2 1,14 15,14" stroke-linecap="round" stroke-linejoin="round"></polygon>
